--- a/pwa/index.html
+++ b/pwa/index.html
@@ -6,13 +6,13 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width">
 	<title>Add to Homescreen</title>
-	<link rel="manifest" href="/manifest.json">
+	<link rel="manifest" href="./manifest.json">
 	<!-- ios -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="pwa-test">
-	<link rel="apple-touch-icon" href="/images/icons/icon-152x152.png">
-	<link rel="apple-touch-icon-precomposed" href="/images/icons/icon-57x57.png">
+	<link rel="apple-touch-icon" href="./images/icons/icon-152x152.png">
+	<link rel="apple-touch-icon-precomposed" href="./images/icons/icon-57x57.png">
 	<style>
 		.add-button {
 			position: absolute;
@@ -28,8 +28,8 @@
 	<button class="add-button">install</button>
 	<a href="intent://addshortcut?url=https://localhost:3000&amp;icon=https://localhost:3000/images/icon-512x512.png&amp;title=PWA-TEST&amp;version=7#Intent;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;end"
 		onclick="nclk(this,'fot.shorcut','','',event);">Android</a>
-	<script src="/js/pwa.js"></script>
-	<script src="/js/status.js"></script>
+	<script src="./js/pwa.js"></script>
+	<script src="./js/status.js"></script>
 </body>
 
 
