--- a/pwa/index.html
+++ b/pwa/index.html
@@ -26,7 +26,7 @@
 <body>
 	<h1>pwa</h1>
 	<button class="add-button">install</button>
-	<a href="intent://addshortcut?url=https://localhost:3000&amp;icon=https://localhost:3000/images/icon-512x512.png&amp;title=PWA-TEST&amp;version=7#Intent;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;end"
+	<a href="intent://addshortcut?url=https://vespiary8824.github.io/pwa&amp;icon=https://vespiary8824.github.io/pwa/images/icon-512x512.png&amp;title=PWA-TEST&amp;version=7#Intent;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;end"
 		onclick="nclk(this,'fot.shorcut','','',event);">Android</a>
 	<script src="./js/pwa.js"></script>
 	<script src="./js/status.js"></script>
