--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 
 <body>
 	<h1>pwa</h1>
-	<span><b class="page-status">online</b></span> <br/>
+	<span><b class="page-status">online</b></span> <br />
 	<a href="intent://addshortcut?url=https://vespiary8824.github.io&amp;icon=https://vespiary8824.github.io/images/icon-512x512.png&amp;title=PWA-TEST&amp;version=7#Intent;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;end"
 		onclick="nclk(this,'fot.shorcut','','',event);">Android</a>
 	<script src="/js/pwa.js"></script>
 	<script src="/js/status.js"></script>
+	<script src="/js/noti-sw.js"></script>
 </body>
 
 
