--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		var userAgent = navigator.userAgent.toLowerCase();
 
 		if (userAgent.match('iphone')) {
+			alert('iphone');
 			document.write('<link rel="apple-touch-icon" href="/images/icons/icon-152x152.png" />')
 		}
 
