--- a/index.html
+++ b/index.html
@@ -42,6 +42,32 @@
 		}
 
 	</script>
+
+
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+	<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+
+	<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+	<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
+
+	<script>
+		// Your web app's Firebase configuration
+		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+		var firebaseConfig = {
+			apiKey: "AIzaSyDpXYZ66Rwf9ojuyCwL9d-KP0ecEZelFdU",
+			authDomain: "pwa-test-d3d85.firebaseapp.com",
+			projectId: "pwa-test-d3d85",
+			storageBucket: "pwa-test-d3d85.appspot.com",
+			messagingSenderId: "1033206875098",
+			appId: "1:1033206875098:web:0ff6971f4e756ce05236e3",
+			measurementId: "G-H512RTG7X6"
+		};
+		// Initialize Firebase
+		firebase.initializeApp(firebaseConfig);
+		firebase.analytics();
+	</script>
+
 </body>
 
 
